<resources>
    <string name="app_name">UserMobileSystem</string>
    <string name="emailAddress">E-mail address</string>
    <string name="title">Defect title</string>
    <string name="faultDescription">Defect description</string>
    <string name="choose_department">Choose department</string>
    <string name="reportDefect">Report a new defect</string>
    <string name="capturePhoto">Capture photo</string>
    <string name="createDefect">Create defect</string>

    <string name="toastDefectReported">Defect reported successfully!</string>
    <string name="toastInvalidEmail">Incorrect e-mail field [5-50]</string>
    <string name="toastInvalidDescription">Description must be not empty [5-100]</string>
    <string name="toastInvalidTitle">Title must be not empty [5-50]</string>
    <string name="toastInvalidPhoto">You must capture photo</string>
    <string name="connectionError">Connection failed!</string>
</resources>
