<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cccccc"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="PL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/langPL" />

        <Button
            android:text="EN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/langEN" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="50sp"
        android:paddingRight="50sp"
        android:paddingTop="10sp">

        <TextView
            android:text="@string/reportDefect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark" />

        <Button
            android:text="@string/capturePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/capturePhoto"
            android:layout_marginTop="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/emailAddress"
            android:id="@+id/emailAddressInput"
            android:layout_alignTop="@+id/content_label"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/faultDescription"
            android:id="@+id/faultDescriptionInput"
            android:layout_alignTop="@+id/content_label"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:inputType="textMultiLine"
            android:lines="3"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chooseDepartment"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/faultDescriptionInput"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:text="@string/createDefect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reportNewFault"
            android:layout_below="@+id/faultDescriptionInput"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20sp" />
    </LinearLayout>

</LinearLayout>

